<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="@dimen/activity_margin"
    tools:context=".EditorActivity">
    <!-- Overview category -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <!-- Label -->
        <TextView
            android:text="@string/category_overview"
            style="@style/CategoryStyle" />

        <!-- Input fields -->
        <LinearLayout
            android:layout_height="wrap_content"
            android:layout_width="0dp"
            android:layout_weight="2"
            android:paddingLeft="4dp"
            android:orientation="vertical">

            <!-- Name field -->
            <EditText
                android:id="@+id/edit_patient_name"
                android:hint="@string/hint_patient_name"
                android:inputType="textCapWords"
                style="@style/EditorFieldStyle" />

            <!-- Age field -->
            <EditText
                android:id="@+id/edit_patient_age"
                android:hint="@string/hint_patient_age"
                android:inputType="textCapWords"
                style="@style/EditorFieldStyle" />

            <!-- Address field -->
            <EditText
                android:id="@+id/edit_patient_address"
                android:hint="@string/hint_patient_address"
                android:inputType="textCapWords"
                style="@style/EditorFieldStyle" />

            <!-- Diease Description field -->
            <EditText
                android:id="@+id/edit_diease_desc"
                android:hint="@string/hint_diease_desc"
                android:inputType="textCapWords"
                style="@style/EditorFieldStyle" />

            <!-- Medicine field -->
            <EditText
                android:id="@+id/edit_medicine"
                android:hint="@string/hint_medicine"
                android:inputType="textCapWords"
                style="@style/EditorFieldStyle" />

        </LinearLayout>
    </LinearLayout>

    <!-- Gender category -->
    <LinearLayout
        android:id="@+id/container_gender"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <!-- Label -->
        <TextView
            android:text="@string/category_gender"
            style="@style/CategoryStyle" />

        <!-- Input field -->
        <LinearLayout
            android:layout_height="wrap_content"
            android:layout_width="0dp"
            android:layout_weight="2"
            android:orientation="vertical">

            <!-- Gender drop-down spinner -->
            <Spinner
                android:id="@+id/spinner_gender"
                android:layout_height="48dp"
                android:layout_width="wrap_content"
                android:paddingRight="16dp"
                android:spinnerMode="dropdown"/>
        </LinearLayout>
    </LinearLayout>
</LinearLayout>